working on welcome page, navBar position absolute to prevent overlapping main container

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,7 @@
 .nav-container {
   width: 100%;
+  background-color: rgba(var(--white), 0);
+  position: absolute;
 }
 
 #button-signout {
