--- a/src/views/Welcome/Welcome.css
+++ b/src/views/Welcome/Welcome.css
@@ -5,26 +5,28 @@
   align-content: center;
   justify-content: center;
   height: 100vh;
-}
+  background: hsla(191, 60%, 89%, 1);
 
-#name-container {
-  display: flex;
-  align-items: center;
-  margin: 1rem;
-}
+  background: radial-gradient(
+    circle,
+    hsla(191, 60%, 89%, 1) 30%,
+    hsla(56, 59%, 86%, 1) 60%,
+    hsla(25, 85%, 69%, 1) 100%
+  );
 
-#name-container > input {
-  height: 5vh;
-  width: 20vw;
-  /* set min width */
-}
+  background: -moz-radial-gradient(
+    circle,
+    hsla(191, 60%, 89%, 1) 30%,
+    hsla(56, 59%, 86%, 1) 60%,
+    hsla(25, 85%, 69%, 1) 100%
+  );
 
-#options-container {
-  height: 50vmin;
-  width: 50vmin;
-}
+  background: -webkit-radial-gradient(
+    circle,
+    hsla(191, 60%, 89%, 1) 30%,
+    hsla(56, 59%, 86%, 1) 60%,
+    hsla(25, 85%, 69%, 1) 100%
+  );
 
-#welcome-title-container {
-  font-family: 'Tamagotchi-Normal', monospace;
-  color: rgba(var(--licorice), 1);
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#D3EEF4", endColorstr="#F1EEC8", GradientType=1 );
 }
